# c3

./: .gitignore  .gitmodules  README.md
backend/: app.py  requirements.txt
backend/routes/: __init__.py  client_api.py
client/: CMakeLists.txt  build.sh
client/internal/: main.cpp
frontend/: package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: interfaces.tsx
frontend/src/components/cardview/: CardView.tsx
frontend/src/components/header/: Header.tsx
frontend/src/components/sidepanel/: SidePanel.tsx
win_client/: main.cpp
ws_backend/: Cargo.toml
ws_backend/src/: main.rs
